<resources>
    <string name="title_home">Home</string>
    <string name="title_stack_over_flow">StackOverFlow</string>
    <string name="title_stack_over_flow_detail">StackOverFlowDetail</string>
    <string name="title_github">Github</string>
    <string name="title_github_detail">GithubDetail</string>
    <string name="title_settings">Settings</string>

    <!-- KEYS -->
    <string name="KEY_LANGUAGE" translatable="false">language</string>
    <string name="KEY_THEME" translatable="false">theme</string>
    <string name="KEY_APPLICATION_CATEGORY" translatable="false">application_category</string>
    <string name="KEY_ABOUT_CATEGORY" translatable="false">about_category</string>
    <string name="KEY_VERSION" translatable="false">version</string>
    <string name="KEY_PRIVACY" translatable="false">privacy</string>

    <!-- SETTINGS -->
    <string name="application_settings">Application Settings</string>
    <string name="language">Language</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_turkish" translatable="false">Türkçe</string>
    <string-array name="languages">
        <item>@string/language_english</item>
        <item>@string/language_turkish</item>
    </string-array>
    <string name="theme">Theme</string>
    <string name="theme_flow_system">Flow System</string>
    <string name="theme_unspecified">Unspecified</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string-array name="themes">
        <item>@string/theme_flow_system</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_light</item>
    </string-array>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="privacy">Privacy</string>

    <!-- EMPTY -->
    <string name="not_found">Not Found</string>
</resources>