<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:icon="@drawable/ic_black_sync"
        app:key="@string/KEY_APPLICATION_CATEGORY"
        app:title="@string/application_settings">

        <ListPreference
            app:entries="@array/languages"
            app:entryValues="@array/languages"
            app:icon="@drawable/ic_black_translating"
            app:key="@string/KEY_LANGUAGE"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/themes"
            app:entryValues="@array/themes"
            app:icon="@drawable/ic_black_theme"
            app:key="@string/KEY_THEME"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_black_about"
        app:key="@string/KEY_ABOUT_CATEGORY"
        app:title="@string/about">

        <Preference
            app:icon="@drawable/ic_black_shuffle"
            app:key="@string/KEY_VERSION"
            app:title="@string/version"
            tools:summary="0.0.0.1" />
    </PreferenceCategory>

    <PreferenceCategory />

    <Preference
        android:enabled="true"
        android:icon="@drawable/ic_black_padlock"
        android:key="@string/KEY_PRIVACY"
        app:title="@string/privacy" />
</PreferenceScreen>